--- a/src/App.css
+++ b/src/App.css
@@ -132,10 +132,12 @@ button.wait::after {
 }
 
 .math {
-  /* position: absolute;
-  right: 0; */
   padding: 5px;
-  color: #eaeaea;
+  opacity: 0.4;
+}
+
+.math svg {
+  vertical-align: middle; /* or try baseline or top */
 }
 
 .mathActive {
