Fixes no-card placeholder tap colour to be transparent like the other cards

--- a/src/components/Cards/styles.module.css
+++ b/src/components/Cards/styles.module.css
@@ -1,6 +1,7 @@
 /* Flash cards */
 
 .no-card {
+  -webkit-tap-highlight-color: transparent;
   box-sizing: border-box;
   display: flex;
   justify-content: center;
