--- a/src/App.css
+++ b/src/App.css
@@ -151,11 +151,11 @@ button.wait::after {
   color: rgb(161, 125, 233);
 }
 
-.settings {
+.panel {
   color: black;
 }
 
-.settings h3 {
+.panel h3 {
   box-sizing: border-box;
   border-radius: 5px;
   margin: 0;
@@ -164,75 +164,64 @@ button.wait::after {
   padding: 10px;
 }
 
-.settings h3.open {
+.panel h3.open {
   border-radius: 5px 5px 0px 0px;
 }
 
-.settings .items {
-  box-sizing: border-box;
-  border-radius: 0px 0px 5px 5px;
-  width: 100%;
-  padding: 10px;
+.panel .items {
+    box-sizing: border-box;
+    border-radius: 0px 0px 5px 5px;
+    width: 100%;
+    padding: 10px;
 }
 
-.your-data button {
+.yellow button {
   background-color: rgb(254, 202, 52);
   border-color: rgb(254, 202, 52);
 }
 
-.your-data .items {
+.yellow .items {
   background-color: rgb(254, 202, 52, 0.1);
 }
 
-.your-data h3 {
+.yellow h3 {
   background-color: rgb(254, 202, 52);
 }
 
-.online-storage button {
+.blue button {
   background-color: rgb(81, 170, 229);
   border-color: rgb(81, 170, 229);
 }
 
-.online-storage .items {
+.blue .items {
   background-color: rgb(81, 170, 229, 0.1);
 }
 
-.online-storage h3 {
+.blue h3 {
   background-color: rgb(81, 170, 229);
 }
 
-.misc button {
+.purple button {
   background-color: rgb(161, 125, 233);
   border-color: rgb(161, 125, 233);
 }
 
-.misc .items {
+.purple .items {
   background-color: rgb(161, 125, 233, 0.1);
 }
 
-.misc .items {
+.purple .items {
   box-sizing: border-box;
   border-radius: 0px 0px 5px 5px;
   width: 100%;
   padding: 10px;
 }
 
-.misc h3 {
+
+.purple h3 {
   background-color: rgb(161, 125, 233);
 }
 
-.misc h3 {
-  box-sizing: border-box;
-  border-radius: 5px;
-  margin: 0;
-  width: 100%;
-  color: white;
-  padding: 10px;
-}
-
-.misc h3.open {
-  border-radius: 5px 5px 0px 0px;
-}
 /* 
 input[type="search"] {
   border: 1px solid gray;
@@ -248,15 +237,15 @@ input[type="search"] {
     color: #666666 !important;
   }
 
-  .your-data button:hover {
+  .yellow button:hover {
     background-color: rgb(254, 202, 52, 0.7);
   }
 
-  .online-storage button:hover {
+  .blue button:hover {
     background-color: rgb(81, 170, 229, 0.7);
   }
 
-  .misc button:hover {
+  .purple button:hover {
     background-color: rgb(161, 125, 233, 0.7);
   }
 }
