Fixes display problem where card text went right up to the edge of the card

--- a/src/components/Card/styles.module.css
+++ b/src/components/Card/styles.module.css
@@ -83,10 +83,12 @@ li {
 
 .flip-card-front,
 .flip-card-back {
+  box-sizing: border-box;
   border-radius: inherit;
   position: absolute;
   width: 100%;
   height: 100%;
+  padding: 0px 10px;
   -webkit-backface-visibility: hidden;
   backface-visibility: hidden;
   display: flex;
