--- a/src/App.css
+++ b/src/App.css
@@ -109,6 +109,10 @@ button.wait::after {
   text-align: left;
 }
 
+.center {
+  text-align: center;
+}
+
 .coffee {
   height: 60px !important;
   width: 217px !important;
