--- a/src/App.css
+++ b/src/App.css
@@ -234,7 +234,7 @@ input[type="search"] {
 
 /* Adapted from https://github.com/arnog/mathlive/issues/598#issuecomment-2299515507 */
 .ML__latex {
-  font-size: 1.21em;
+  /* font-size: 1.21em; */
   font-weight: normal;
   width: auto !important;
   display: flex !important;
