--- a/src/components/SearchBar/styles.module.css
+++ b/src/components/SearchBar/styles.module.css
@@ -3,7 +3,7 @@ input[type="search"]::-webkit-search-cancel-button {
   height: 1em;
   width: 1em;
   border-radius: 50em;
-  background: url("../../assets/times-circle.svg") no-repeat 50% 50%;
+  background: url("../../assets/img/times-circle.svg") no-repeat 50% 50%;
   background-size: contain;
   opacity: 0;
   pointer-events: none;
